[package]
name = "anti-tower"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "*", features = [ "debug-render-2d" ]}
bevy-inspector-egui = "0.19"
proc-macro2 = "1.0.81"
